2009-04-02 Alexander Malysh <amalysh at kannel.org>
    * gwlib/thread.[ch]: fixed compilation failure if compiled with
      '--enable-mutex-stats'.
      Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for report.

2009-04-02 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed issue that return code 1 of conn_write
      that indicated still data buffered but no error was interpreted
      as error.
      Thanks to "Raf Coremans" <raco at mach.com> who spotted and reported
      this issue.

2009-04-01 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: handle partial SMPP v3.4 DLR support, when
      receipted_message_id received but not the dlrstat.

2009-03-30 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: applied patch that fixes octsr_copy length.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-03-30 Alexander Malysh <amalysh at kannel.org>
    * gw/wap-appl.c: applied patch that fixes possible infinite loop.
      Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for this patch.

2009-03-29 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: applied patch that fixes octsr_copy length.
      Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for this patch.
      [Msg-Id: <002b01c9af01$c06655d0$02b2a8c0@tardis>]

2009-03-15 Alexander Malysh <amalysh at kannel.org>
    * gwlib/cfg.c: fixed compilation error introduced by Stipe.

2009-03-14  Stipe Tolj  <stolj at kannel.org>
    * gwlib/cfg.c: fix segfault on sparc-solaris10 and possibly various other
      systems in case of a failing lstat() call and further undefined 
      processing of the variable outcome.
      
2009-03-14  Stipe Tolj  <stolj at kannel.org>
    * config.rpath: touched file to surpress the configure error.
    * configure[.in], aclocal.m4: added '--enable-auto-import' linker option
      for the Cygwin 1.x platform to avoid warnings at link time.
      