@@ -1,3 +1,7 @@
+2009-04-03 Alexander Malysh <amalysh at kannel.org>
+    * utils/mtbatch.c: applied patch that fixes #495.
+      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.
+
 2009-04-02 Alexander Malysh <amalysh at kannel.org>
     * gwlib/thread.[ch]: fixed compilation failure if compiled with
       '--enable-mutex-stats'.
